Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -306,3 +306,4 @@ Temporary commit content 3489
 Temporary commit content 3502
 Temporary commit content 3518
 Temporary commit content 3520
+Temporary commit content 3533
