Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -239,3 +239,4 @@ Temporary commit content 2819
 Temporary commit content 2832
 Temporary commit content 2839
 Temporary commit content 2873
+Temporary commit content 2878
