Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -406,3 +406,4 @@ Temporary commit content 4788
 Temporary commit content 4814
 Temporary commit content 4824
 Temporary commit content 4851
+Temporary commit content 4860
