Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -34,3 +34,4 @@ Temporary commit content 354
 Temporary commit content 359
 Temporary commit content 373
 Temporary commit content 385
+Temporary commit content 386
