Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -299,3 +299,4 @@ Temporary commit content 3434
 Temporary commit content 3440
 Temporary commit content 3441
 Temporary commit content 3444
+Temporary commit content 3453
