Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -159,3 +159,4 @@ Temporary commit content 1728
 Temporary commit content 1732
 Temporary commit content 1733
 Temporary commit content 1739
+Temporary commit content 1746
