Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -195,3 +195,4 @@ Temporary commit content 2141
 Temporary commit content 2142
 Temporary commit content 2164
 Temporary commit content 2204
+Temporary commit content 2220
