Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -126,3 +126,4 @@ Temporary commit content 1381
 Temporary commit content 1388
 Temporary commit content 1397
 Temporary commit content 1399
+Temporary commit content 1422
