Added initial project plan

--- a/edt/index.html
+++ b/edt/index.html
@@ -147,3 +147,4 @@ Temporary commit content 1594
 Temporary commit content 1616
 Temporary commit content 1617
 Temporary commit content 1622
+Temporary commit content 1647
