Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -219,3 +219,4 @@ Temporary commit content 2595
 Temporary commit content 2605
 Temporary commit content 2607
 Temporary commit content 2631
+Temporary commit content 2632
