Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -256,3 +256,4 @@ Temporary commit content 3035
 Temporary commit content 3040
 Temporary commit content 3046
 Temporary commit content 3060
+Temporary commit content 3062
