Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -76,3 +76,4 @@ Temporary commit content 683
 Temporary commit content 725
 Temporary commit content 736
 Temporary commit content 739
+Temporary commit content 741
