Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -279,3 +279,4 @@ Temporary commit content 3187
 Temporary commit content 3201
 Temporary commit content 3205
 Temporary commit content 3220
+Temporary commit content 3221
