Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -263,3 +263,4 @@ Temporary commit content 3088
 Temporary commit content 3089
 Temporary commit content 3090
 Temporary commit content 3093
+Temporary commit content 3094
