Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -246,3 +246,4 @@ Temporary commit content 2917
 Temporary commit content 2918
 Temporary commit content 2919
 Temporary commit content 2948
+Temporary commit content 2977
