Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -182,3 +182,4 @@ Temporary commit content 1943
 Temporary commit content 1963
 Temporary commit content 1982
 Temporary commit content 2003
+Temporary commit content 2006
