Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -130,3 +130,4 @@ Temporary commit content 1422
 Temporary commit content 1423
 Temporary commit content 1440
 Temporary commit content 1455
+Temporary commit content 1458
