Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -274,3 +274,4 @@ Temporary commit content 3146
 Temporary commit content 3156
 Temporary commit content 3167
 Temporary commit content 3170
+Temporary commit content 3172
