Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -194,3 +194,4 @@ Temporary commit content 2128
 Temporary commit content 2141
 Temporary commit content 2142
 Temporary commit content 2164
+Temporary commit content 2204
