Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -150,3 +150,4 @@ Temporary commit content 1622
 Temporary commit content 1647
 Temporary commit content 1662
 Temporary commit content 1667
+Temporary commit content 1684
