Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -398,3 +398,4 @@ Temporary commit content 4704
 Temporary commit content 4712
 Temporary commit content 4723
 Temporary commit content 4736
+Temporary commit content 4740
