Refactored code for better readability

--- a/edt/index.html
+++ b/edt/index.html
@@ -252,3 +252,4 @@ Temporary commit content 3001
 Temporary commit content 3014
 Temporary commit content 3019
 Temporary commit content 3033
+Temporary commit content 3035
