Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -158,3 +158,4 @@ Temporary commit content 1715
 Temporary commit content 1728
 Temporary commit content 1732
 Temporary commit content 1733
+Temporary commit content 1739
