Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -209,3 +209,4 @@ Temporary commit content 2371
 Temporary commit content 2380
 Temporary commit content 2384
 Temporary commit content 2454
+Temporary commit content 2484
