Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -170,3 +170,4 @@ Temporary commit content 1871
 Temporary commit content 1883
 Temporary commit content 1890
 Temporary commit content 1895
+Temporary commit content 1896
