Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -374,3 +374,4 @@ Temporary commit content 4446
 Temporary commit content 4457
 Temporary commit content 4467
 Temporary commit content 4475
+Temporary commit content 4492
