Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -317,3 +317,4 @@ Temporary commit content 3603
 Temporary commit content 3624
 Temporary commit content 3626
 Temporary commit content 3650
+Temporary commit content 3663
