Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -94,3 +94,4 @@ Temporary commit content 886
 Temporary commit content 903
 Temporary commit content 913
 Temporary commit content 919
+Temporary commit content 929
