Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -381,3 +381,4 @@ Temporary commit content 4506
 Temporary commit content 4514
 Temporary commit content 4527
 Temporary commit content 4554
+Temporary commit content 4560
