Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -140,3 +140,4 @@ Temporary commit content 1516
 Temporary commit content 1540
 Temporary commit content 1548
 Temporary commit content 1557
+Temporary commit content 1577
