Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -207,3 +207,4 @@ Temporary commit content 2323
 Temporary commit content 2356
 Temporary commit content 2371
 Temporary commit content 2380
+Temporary commit content 2384
