Added initial project plan

--- a/edt/index.html
+++ b/edt/index.html
@@ -261,3 +261,4 @@ Temporary commit content 3085
 Temporary commit content 3086
 Temporary commit content 3088
 Temporary commit content 3089
+Temporary commit content 3090
