Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -29,3 +29,4 @@ Temporary commit content 308
 Temporary commit content 311
 Temporary commit content 321
 Temporary commit content 325
+Temporary commit content 342
