Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -241,3 +241,4 @@ Temporary commit content 2839
 Temporary commit content 2873
 Temporary commit content 2878
 Temporary commit content 2889
+Temporary commit content 2907
