Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -315,3 +315,4 @@ Temporary commit content 3587
 Temporary commit content 3599
 Temporary commit content 3603
 Temporary commit content 3624
+Temporary commit content 3626
