Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -63,3 +63,4 @@ Temporary commit content 585
 Temporary commit content 591
 Temporary commit content 599
 Temporary commit content 600
+Temporary commit content 613
