Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -156,3 +156,4 @@ Temporary commit content 1688
 Temporary commit content 1713
 Temporary commit content 1715
 Temporary commit content 1728
+Temporary commit content 1732
