Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -203,3 +203,4 @@ Temporary commit content 2273
 Temporary commit content 2287
 Temporary commit content 2292
 Temporary commit content 2300
+Temporary commit content 2323
