Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -113,3 +113,4 @@ Temporary commit content 1241
 Temporary commit content 1255
 Temporary commit content 1264
 Temporary commit content 1274
+Temporary commit content 1278
