Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -143,3 +143,4 @@ Temporary commit content 1557
 Temporary commit content 1577
 Temporary commit content 1578
 Temporary commit content 1581
+Temporary commit content 1594
