Updated project documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -328,3 +328,4 @@ Temporary commit content 3828
 Temporary commit content 3848
 Temporary commit content 3855
 Temporary commit content 3901
+Temporary commit content 3907
