Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -392,3 +392,4 @@ Temporary commit content 4650
 Temporary commit content 4669
 Temporary commit content 4686
 Temporary commit content 4692
+Temporary commit content 4698
