Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -282,3 +282,4 @@ Temporary commit content 3220
 Temporary commit content 3221
 Temporary commit content 3226
 Temporary commit content 3228
+Temporary commit content 3234
