Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -233,3 +233,4 @@ Temporary commit content 2742
 Temporary commit content 2743
 Temporary commit content 2759
 Temporary commit content 2765
+Temporary commit content 2770
