Fixed typos in documentation

--- a/edt/index.html
+++ b/edt/index.html
@@ -73,3 +73,4 @@ Temporary commit content 658
 Temporary commit content 659
 Temporary commit content 681
 Temporary commit content 683
+Temporary commit content 725
