Updated README with new features

--- a/edt/index.html
+++ b/edt/index.html
@@ -175,3 +175,4 @@ Temporary commit content 1899
 Temporary commit content 1900
 Temporary commit content 1904
 Temporary commit content 1915
+Temporary commit content 1932
