Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -119,3 +119,4 @@ Temporary commit content 1312
 Temporary commit content 1313
 Temporary commit content 1316
 Temporary commit content 1333
+Temporary commit content 1347
