Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -61,3 +61,4 @@ Temporary commit content 562
 Temporary commit content 576
 Temporary commit content 585
 Temporary commit content 591
+Temporary commit content 599
