Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -69,3 +69,4 @@ Temporary commit content 634
 Temporary commit content 635
 Temporary commit content 641
 Temporary commit content 644
+Temporary commit content 658
