Enhanced UI responsiveness

--- a/edt/index.html
+++ b/edt/index.html
@@ -266,3 +266,4 @@ Temporary commit content 3093
 Temporary commit content 3094
 Temporary commit content 3095
 Temporary commit content 3101
+Temporary commit content 3113
