Optimized database queries

--- a/edt/index.html
+++ b/edt/index.html
@@ -240,3 +240,4 @@ Temporary commit content 2832
 Temporary commit content 2839
 Temporary commit content 2873
 Temporary commit content 2878
+Temporary commit content 2889
