Improved error handling logic

--- a/edt/index.html
+++ b/edt/index.html
@@ -363,3 +363,4 @@ Temporary commit content 4291
 Temporary commit content 4318
 Temporary commit content 4341
 Temporary commit content 4342
+Temporary commit content 4362
