Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -106,3 +106,4 @@ Temporary commit content 1067
 Temporary commit content 1077
 Temporary commit content 1129
 Temporary commit content 1175
+Temporary commit content 1191
