Fixed bug in data processing script

--- a/edt/index.html
+++ b/edt/index.html
@@ -325,3 +325,4 @@ Temporary commit content 3771
 Temporary commit content 3812
 Temporary commit content 3815
 Temporary commit content 3828
+Temporary commit content 3848
