Added validation for user input

--- a/edt/index.html
+++ b/edt/index.html
@@ -123,3 +123,4 @@ Temporary commit content 1347
 Temporary commit content 1355
 Temporary commit content 1361
 Temporary commit content 1381
+Temporary commit content 1388
